Proyecto2/kubernetes/rust-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-api
  namespace: tweets-clima
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rust-api
  template:
    metadata:
      labels:
        app: rust-api
    spec:
      containers:
      - name: rust-api
        image: 34.135.173.147.nip.io/proyecto2/rust-api:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: rust-api-service
  namespace: tweets-clima
spec:
  selector:
    app: rust-api
  ports:
  - port: 8080
    targetPort: 8080
